experiments/people/friebe/jay/y.output
   0  $accept : start $end

   1  start : top_statement_list

   2  top_statement_list : top_statement_list top_statement
   3                     |

   4  top_statement : statement
   5                | function_declaration_statement
   6                | class_declaration_statement
   7                | package_declaration_statement
   8                | enum_declaration_statement
   9                | T_HALT_COMPILER '(' ')' ';'

  10  inner_statement_list : inner_statement_list inner_statement
  11                       |

  12  inner_statement : statement
  13                  | function_declaration_statement
  14                  | class_declaration_statement
  15                  | package_declaration_statement
  16                  | T_HALT_COMPILER '(' ')' ';'

  17  statement : unticked_statement

  18  unticked_statement : '{' inner_statement_list '}'
  19                     | T_IF '(' expr ')' statement elseif_list else_single
  20                     | T_IF '(' expr ')' ':' inner_statement_list new_elseif_list new_else_single T_ENDIF ';'
  21                     | T_WHILE '(' expr ')' while_statement
  22                     | T_DO statement T_WHILE '(' expr ')' ';'
  23                     | T_FOR '(' for_expr ';' for_expr ';' for_expr ')' for_statement
  24                     | T_SWITCH '(' expr ')' switch_case_list
  25                     | T_BREAK ';'
  26                     | T_BREAK expr ';'
  27                     | T_CONTINUE ';'
  28                     | T_CONTINUE expr ';'
  29                     | T_RETURN ';'
  30                     | T_RETURN expr_without_variable ';'
  31                     | T_RETURN variable ';'
  32                     | T_GLOBAL global_var_list ';'
  33                     | T_STATIC static_var_list ';'
  34                     | T_ECHO echo_expr_list ';'
  35                     | T_INLINE_HTML
  36                     | expr ';'
  37                     | T_USE use_filename ';'
  38                     | T_UNSET '(' unset_variables ')' ';'

  39  $$1 :

  40  $$2 :

  41  $$3 :

  42  unticked_statement : T_FOREACH '(' variable $$1 T_AS $$2 foreach_variable foreach_optional_arg ')' $$3 foreach_statement

  43  $$4 :

  44  $$5 :

  45  $$6 :

  46  unticked_statement : T_FOREACH '(' expr_without_variable $$4 T_AS $$5 w_variable foreach_optional_arg ')' $$6 foreach_statement

  47  $$7 :

  48  unticked_statement : T_DECLARE $$7 '(' declare_list ')' declare_statement
  49                     | ';'
  50                     | T_TRY '{' inner_statement_list '}' T_CATCH '(' fully_qualified_class_name T_VARIABLE ')' '{' inner_statement_list '}' additional_catches
  51                     | T_THROW expr ';'
  52                     | T_IMPORT import_list ';'

  53  import_list : import_list ',' import
  54              | import

  55  import : class_name_reference
  56         | class_name_reference T_AS T_STRING
  57         | class_name_reference T_AS r_variable

  58  additional_catches : non_empty_additional_catches
  59                     |

  60  non_empty_additional_catches : additional_catch
  61                               | non_empty_additional_catches additional_catch

  62  additional_catch : T_CATCH '(' fully_qualified_class_name T_VARIABLE ')' '{' inner_statement_list '}'

  63  enum_declaration_statement : unticked_enum_declaration_statement

  64  unset_variables : unset_variable
  65                  | unset_variables ',' unset_variable

  66  unset_variable : variable

  67  use_filename : T_CONSTANT_ENCAPSED_STRING
  68               | '(' T_CONSTANT_ENCAPSED_STRING ')'

  69  function_declaration_statement : unticked_function_declaration_statement

  70  class_declaration_statement : unticked_class_declaration_statement

  71  package_inner_statement_list : package_inner_statement_list package_inner_statement
  72                               |

  73  package_inner_statement : class_declaration_statement
  74                          | enum_declaration_statement
  75                          | T_IMPORT package_import_list ';'

  76  package_import_list : package_import_list ',' package_import
  77                      | package_import

  78  package_import : T_CLASSNAME
  79                 | T_CLASSNAME T_AS T_STRING

  80  package_declaration_statement : unticked_package_declaration_statement

  81  is_reference :
  82               | '&'

  83  $$8 :

  84  $$9 :

  85  unticked_function_declaration_statement : T_FUNCTION $$8 is_reference T_STRING $$9 '(' parameter_list ')' '{' inner_statement_list '}'

  86  optional_annotation_list :
  87                           | annotation_list

  88  unticked_class_declaration_statement : optional_annotation_list class_entry_type T_STRING extends_from implements_list '{' class_statement_list '}'
  89                                       | optional_annotation_list interface_entry T_STRING interface_extends_list '{' class_statement_list '}'

  90  unticked_package_declaration_statement : T_PACKAGE fully_qualified_class_name '{' package_inner_statement_list '}'

  91  class_entry_type : T_CLASS
  92                   | T_ABSTRACT T_CLASS
  93                   | T_FINAL T_CLASS

  94  extends_from :
  95               | T_EXTENDS fully_qualified_class_name

  96  interface_entry : T_INTERFACE

  97  interface_extends_list :
  98                         | T_EXTENDS interface_list

  99  implements_list :
 100                  | T_IMPLEMENTS interface_list

 101  interface_list : fully_qualified_class_name
 102                 | interface_list ',' fully_qualified_class_name

 103  unticked_enum_declaration_statement : optional_annotation_list T_ENUM T_STRING '{' enum_inner_statement_list '}'

 104  enum_inner_statement_list : enum_declaration_list
 105                            | enum_declaration_list ';' class_statement_list

 106  enum_declaration_list : enum_declaration_list ',' enum_declaration_list_member
 107                        | enum_declaration_list_member

 108  enum_declaration_list_member : T_STRING
 109                               | T_STRING '(' static_scalar ')'
 110                               | T_STRING '{' method_declaration '}'

 111  foreach_optional_arg :
 112                       | T_DOUBLE_ARROW foreach_variable

 113  foreach_variable : w_variable
 114                   | '&' w_variable

 115  for_statement : statement
 116                | ':' inner_statement_list T_ENDFOR ';'

 117  foreach_statement : statement
 118                    | ':' inner_statement_list T_ENDFOREACH ';'

 119  declare_statement : statement
 120                    | ':' inner_statement_list T_ENDDECLARE ';'

 121  declare_list : T_STRING '=' static_scalar
 122               | declare_list ',' T_STRING '=' static_scalar

 123  switch_case_list : '{' case_list '}'
 124                   | '{' ';' case_list '}'
 125                   | ':' case_list T_ENDSWITCH ';'
 126                   | ':' ';' case_list T_ENDSWITCH ';'

 127  case_list :
 128            | case_list T_CASE expr case_separator inner_statement_list
 129            | case_list T_DEFAULT case_separator inner_statement_list

 130  case_separator : ':'
 131                 | ';'

 132  while_statement : statement
 133                  | ':' inner_statement_list T_ENDWHILE ';'

 134  elseif_list :
 135              | elseif_list T_ELSEIF '(' expr ')' statement

 136  new_elseif_list :

 137  $$10 :

 138  new_elseif_list : new_elseif_list T_ELSEIF '(' expr ')' ':' $$10 inner_statement_list

 139  else_single :
 140              | T_ELSE statement

 141  new_else_single :
 142                  | T_ELSE ':' inner_statement_list

 143  parameter_list : non_empty_parameter_list
 144                 |

 145  non_empty_parameter_list : optional_class_type T_VARIABLE
 146                           | optional_class_type '&' T_VARIABLE
 147                           | optional_class_type '&' T_VARIABLE '=' static_scalar
 148                           | optional_class_type T_VARIABLE '=' static_scalar
 149                           | non_empty_parameter_list ',' optional_class_type T_VARIABLE
 150                           | non_empty_parameter_list ',' optional_class_type '&' T_VARIABLE
 151                           | non_empty_parameter_list ',' optional_class_type '&' T_VARIABLE '=' static_scalar
 152                           | non_empty_parameter_list ',' optional_class_type T_VARIABLE '=' static_scalar

 153  optional_class_type :
 154                      | T_STRING
 155                      | T_CLASSNAME
 156                      | T_ARRAY

 157  function_call_parameter_list : non_empty_function_call_parameter_list
 158                               |

 159  non_empty_function_call_parameter_list : expr_without_variable
 160                                         | variable
 161                                         | '&' w_variable
 162                                         | non_empty_function_call_parameter_list ',' expr_without_variable
 163                                         | non_empty_function_call_parameter_list ',' variable
 164                                         | non_empty_function_call_parameter_list ',' '&' w_variable

 165  global_var_list : global_var_list ',' global_var
 166                  | global_var

 167  global_var : T_VARIABLE
 168             | '$' r_variable
 169             | '$' '{' expr '}'

 170  static_var_list : static_var_list ',' T_VARIABLE
 171                  | static_var_list ',' T_VARIABLE '=' static_scalar
 172                  | T_VARIABLE
 173                  | T_VARIABLE '=' static_scalar

 174  class_statement_list : class_statement_list class_statement
 175                       |

 176  class_statement : variable_modifiers class_variable_declaration ';'
 177                  | class_constant_declaration ';'
 178                  | method_modifiers T_OPERATOR is_reference operator_token '(' parameter_list ')' throws method_body
 179                  | annotation_list method_modifiers T_OPERATOR is_reference operator_token '(' parameter_list ')' throws method_body
 180                  | method_declaration

 181  method_declaration : method_modifiers T_CONSTRUCT '(' parameter_list ')' throws method_body
 182                     | annotation_list method_modifiers T_CONSTRUCT '(' parameter_list ')' throws method_body
 183                     | method_modifiers return_type_name is_reference T_STRING '(' parameter_list ')' throws method_body
 184                     | annotation_list method_modifiers return_type_name is_reference T_STRING '(' parameter_list ')' throws method_body

 185  return_type_name : fully_qualified_class_name
 186                   | T_VOID
 187                   | T_FUNCTION

 188  throws :
 189         | T_THROWS throws_list

 190  throws_list : fully_qualified_class_name
 191              | throws_list ',' fully_qualified_class_name

 192  annotation_list : '[' annotation_elements ']'

 193  annotation_elements : annotation
 194                      | annotation_elements ',' annotation

 195  annotation : '@' T_STRING
 196             | '@' T_STRING '(' common_scalar ')'
 197             | '@' T_STRING '(' annotation_defines ')'

 198  annotation_defines : annotation_define
 199                     | annotation_defines ',' annotation_define

 200  annotation_define : T_STRING
 201                    | T_STRING '=' static_scalar

 202  operator_token : '+'
 203                 | '-'
 204                 | '*'
 205                 | '/'
 206                 | '%'
 207                 | '!'
 208                 | T_INC
 209                 | T_DEC
 210                 | T_COMPARE

 211  method_body : ';'
 212              | '{' inner_statement_list '}'

 213  variable_modifiers : non_empty_member_modifiers
 214                     | T_VAR

 215  method_modifiers :
 216                   | non_empty_member_modifiers

 217  non_empty_member_modifiers : member_modifier
 218                             | non_empty_member_modifiers member_modifier

 219  member_modifier : T_PUBLIC
 220                  | T_PROTECTED
 221                  | T_PRIVATE
 222                  | T_STATIC
 223                  | T_ABSTRACT
 224                  | T_FINAL

 225  class_variable_declaration : class_variable_declaration ',' T_VARIABLE
 226                             | class_variable_declaration ',' T_VARIABLE '=' static_scalar
 227                             | T_VARIABLE
 228                             | T_VARIABLE '=' static_scalar

 229  class_constant_declaration : class_constant_declaration ',' T_STRING '=' static_scalar
 230                             | T_CONST T_STRING '=' static_scalar

 231  echo_expr_list : echo_expr_list ',' expr
 232                 | expr

 233  for_expr :
 234           | non_empty_for_expr

 235  non_empty_for_expr : non_empty_for_expr ',' expr
 236                     | expr

 237  $$11 :

 238  expr_without_variable : T_LIST '(' $$11 assignment_list ')' '=' expr
 239                        | variable '=' expr
 240                        | variable '=' '&' variable
 241                        | variable '=' '&' T_NEW class_name_reference
 242                        | T_NEW class_name_reference ctor_arguments
 243                        | T_CLONE expr
 244                        | variable T_PLUS_EQUAL expr
 245                        | variable T_MINUS_EQUAL expr
 246                        | variable T_MUL_EQUAL expr
 247                        | variable T_DIV_EQUAL expr
 248                        | variable T_CONCAT_EQUAL expr
 249                        | variable T_MOD_EQUAL expr
 250                        | variable T_AND_EQUAL expr
 251                        | variable T_OR_EQUAL expr
 252                        | variable T_XOR_EQUAL expr
 253                        | variable T_SL_EQUAL expr
 254                        | variable T_SR_EQUAL expr
 255                        | rw_variable T_INC
 256                        | T_INC rw_variable
 257                        | rw_variable T_DEC
 258                        | T_DEC rw_variable
 259                        | expr T_BOOLEAN_OR expr
 260                        | expr T_BOOLEAN_AND expr
 261                        | expr T_LOGICAL_OR expr
 262                        | expr T_LOGICAL_AND expr
 263                        | expr T_LOGICAL_XOR expr
 264                        | expr '|' expr
 265                        | expr '&' expr
 266                        | expr '^' expr
 267                        | expr '.' expr
 268                        | expr '+' expr
 269                        | expr '-' expr
 270                        | expr '*' expr
 271                        | expr '/' expr
 272                        | expr '%' expr
 273                        | expr T_SL expr
 274                        | expr T_SR expr
 275                        | '+' expr
 276                        | '-' expr
 277                        | '!' expr
 278                        | '~' expr
 279                        | expr T_IS_IDENTICAL expr
 280                        | expr T_IS_NOT_IDENTICAL expr
 281                        | expr T_IS_EQUAL expr
 282                        | expr T_IS_NOT_EQUAL expr
 283                        | expr '<' expr
 284                        | expr T_IS_SMALLER_OR_EQUAL expr
 285                        | expr '>' expr
 286                        | expr T_IS_GREATER_OR_EQUAL expr
 287                        | expr T_COMPARE_ARROW expr
 288                        | expr T_INSTANCEOF class_name_reference
 289                        | '(' expr ')'
 290                        | expr '?' expr ':' expr
 291                        | internal_functions_in_yacc
 292                        | T_INT_CAST expr
 293                        | T_DOUBLE_CAST expr
 294                        | T_STRING_CAST expr
 295                        | T_ARRAY_CAST expr
 296                        | T_OBJECT_CAST expr
 297                        | T_BOOL_CAST expr
 298                        | T_UNSET_CAST expr
 299                        | T_EXIT exit_expr

 300  $$12 :

 301  expr_without_variable : '@' $$12 expr
 302                        | scalar
 303                        | T_ARRAY '(' array_pair_list ')'
 304                        | '`' encaps_list '`'
 305                        | T_PRINT expr

 306  function_call : T_STRING '(' function_call_parameter_list ')'
 307                | fully_qualified_class_name T_DOUBLE_COLON T_STRING '(' function_call_parameter_list ')'
 308                | fully_qualified_class_name T_DOUBLE_COLON variable_without_objects '(' function_call_parameter_list ')'
 309                | variable_without_objects '(' function_call_parameter_list ')'

 310  fully_qualified_class_name : T_STRING
 311                             | T_CLASSNAME

 312  class_name_reference : T_STRING
 313                       | T_CLASSNAME
 314                       | dynamic_class_name_reference

 315  dynamic_class_name_reference : base_variable T_OBJECT_OPERATOR object_property dynamic_class_name_variable_properties
 316                               | base_variable

 317  dynamic_class_name_variable_properties : dynamic_class_name_variable_properties dynamic_class_name_variable_property
 318                                         |

 319  dynamic_class_name_variable_property : T_OBJECT_OPERATOR object_property

 320  exit_expr :
 321            | '(' ')'
 322            | '(' expr ')'

 323  ctor_arguments :
 324                 | '(' function_call_parameter_list ')'
 325                 | '(' function_call_parameter_list ')' '{' class_statement_list '}'

 326  common_scalar : T_LNUMBER
 327                | T_DNUMBER
 328                | T_CONSTANT_ENCAPSED_STRING
 329                | T_LINE
 330                | T_FILE
 331                | T_CLASS_C
 332                | T_METHOD_C
 333                | T_FUNC_C

 334  static_scalar : common_scalar
 335                | T_STRING
 336                | '+' static_scalar
 337                | '-' static_scalar
 338                | T_ARRAY '(' static_array_pair_list ')'
 339                | class_constant

 340  scalar : T_STRING
 341         | T_STRING_VARNAME
 342         | class_constant
 343         | common_scalar
 344         | '"' encaps_list '"'
 345         | '\'' encaps_list '\''
 346         | T_START_HEREDOC encaps_list T_END_HEREDOC

 347  static_array_pair_list :
 348                         | non_empty_static_array_pair_list possible_comma

 349  possible_comma :
 350                 | ','

 351  non_empty_static_array_pair_list : non_empty_static_array_pair_list ',' static_scalar T_DOUBLE_ARROW static_scalar
 352                                   | non_empty_static_array_pair_list ',' static_scalar
 353                                   | static_scalar T_DOUBLE_ARROW static_scalar
 354                                   | static_scalar

 355  expr : r_variable
 356       | expr_without_variable

 357  r_variable : variable

 358  w_variable : variable

 359  rw_variable : variable

 360  variable : base_variable_with_function_calls T_OBJECT_OPERATOR object_property method_or_not variable_properties
 361           | base_variable_with_function_calls

 362  variable_properties : variable_properties variable_property
 363                      |

 364  variable_property : T_OBJECT_OPERATOR object_property method_or_not

 365  method_or_not : '(' function_call_parameter_list ')'
 366                |

 367  variable_without_objects : reference_variable
 368                           | simple_indirect_reference reference_variable

 369  static_member : fully_qualified_class_name T_DOUBLE_COLON variable_without_objects

 370  base_variable_with_function_calls : base_variable
 371                                    | function_call

 372  base_variable : reference_variable
 373                | simple_indirect_reference reference_variable
 374                | static_member

 375  reference_variable : reference_variable '[' dim_offset ']'
 376                     | reference_variable '{' expr '}'
 377                     | compound_variable

 378  compound_variable : T_VARIABLE
 379                    | '$' '{' expr '}'

 380  dim_offset :
 381             | expr

 382  object_property : object_dim_list

 383  $$13 :

 384  object_property : variable_without_objects $$13

 385  object_dim_list : object_dim_list '[' dim_offset ']'
 386                  | object_dim_list '{' expr '}'
 387                  | variable_name

 388  variable_name : T_STRING
 389                | '{' expr '}'

 390  simple_indirect_reference : '$'
 391                            | simple_indirect_reference '$'

 392  assignment_list : assignment_list ',' assignment_list_element
 393                  | assignment_list_element

 394  assignment_list_element : variable

 395  $$14 :

 396  assignment_list_element : T_LIST '(' $$14 assignment_list ')'
 397                          |

 398  array_pair_list :
 399                  | non_empty_array_pair_list possible_comma

 400  non_empty_array_pair_list : non_empty_array_pair_list ',' expr T_DOUBLE_ARROW expr
 401                            | non_empty_array_pair_list ',' expr
 402                            | expr T_DOUBLE_ARROW expr
 403                            | expr
 404                            | non_empty_array_pair_list ',' expr T_DOUBLE_ARROW '&' w_variable
 405                            | non_empty_array_pair_list ',' '&' w_variable
 406                            | expr T_DOUBLE_ARROW '&' w_variable
 407                            | '&' w_variable

 408  encaps_list : encaps_list encaps_var
 409              | encaps_list T_STRING
 410              | encaps_list T_NUM_STRING
 411              | encaps_list T_ENCAPSED_AND_WHITESPACE
 412              | encaps_list T_CHARACTER
 413              | encaps_list T_BAD_CHARACTER
 414              | encaps_list '['
 415              | encaps_list ']'
 416              | encaps_list '{'
 417              | encaps_list '}'
 418              | encaps_list T_OBJECT_OPERATOR
 419              |

 420  encaps_var : T_VARIABLE

 421  $$15 :

 422  encaps_var : T_VARIABLE '[' $$15 encaps_var_offset ']'
 423             | T_VARIABLE T_OBJECT_OPERATOR T_STRING
 424             | T_DOLLAR_OPEN_CURLY_BRACES expr '}'
 425             | T_DOLLAR_OPEN_CURLY_BRACES T_STRING_VARNAME '[' expr ']' '}'
 426             | T_CURLY_OPEN variable '}'

 427  encaps_var_offset : T_STRING
 428                    | T_NUM_STRING
 429                    | T_VARIABLE

 430  internal_functions_in_yacc : T_ISSET '(' isset_variables ')'
 431                             | T_EMPTY '(' variable ')'
 432                             | T_INCLUDE expr
 433                             | T_INCLUDE_ONCE expr
 434                             | T_EVAL '(' expr ')'
 435                             | T_REQUIRE expr
 436                             | T_REQUIRE_ONCE expr

 437  isset_variables : variable

 438  $$16 :

 439  isset_variables : isset_variables ',' $$16 variable

 440  class_constant : fully_qualified_class_name T_DOUBLE_COLON T_STRING

state 0
	$accept : . start $end  (0)
	top_statement_list : .  (3)

	.  reduce 3

	start  goto 1
	top_statement_list  goto 2


state 1
	$accept : start . $end  (0)

	$end  accept


state 2
	start : top_statement_list .  (1)
	top_statement_list : top_statement_list . top_statement  (2)
	optional_annotation_list : .  (86)

	T_INCLUDE  shift 3
	T_INCLUDE_ONCE  shift 4
	T_EVAL  shift 5
	T_REQUIRE  shift 6
	T_REQUIRE_ONCE  shift 7
	T_PRINT  shift 8
	'+'  shift 9
	'-'  shift 10
	'!'  shift 11
	'~'  shift 12
	T_INC  shift 13
	T_DEC  shift 14
	T_INT_CAST  shift 15
	T_DOUBLE_CAST  shift 16
	T_STRING_CAST  shift 17
	T_ARRAY_CAST  shift 18
	T_OBJECT_CAST  shift 19
	T_BOOL_CAST  shift 20
	T_UNSET_CAST  shift 21
	'@'  shift 22
	'['  shift 23
	T_NEW  shift 24
	T_CLONE  shift 25
	T_STATIC  shift 26
	T_EXIT  shift 27
	T_IF  shift 28
	T_LNUMBER  shift 29
	T_DNUMBER  shift 30
	T_STRING  shift 31
	T_STRING_VARNAME  shift 32
	T_VARIABLE  shift 33
	T_INLINE_HTML  shift 34
	T_CONSTANT_ENCAPSED_STRING  shift 35
	T_ECHO  shift 36
	T_DO  shift 37
	T_WHILE  shift 38
	T_FOR  shift 39
	T_FOREACH  shift 40
	T_DECLARE  shift 41
	T_SWITCH  shift 42
	T_BREAK  shift 43
	T_CONTINUE  shift 44
	T_FUNCTION  shift 45
	T_RETURN  shift 46
	T_TRY  shift 47
	T_THROW  shift 48
	T_USE  shift 49
	T_GLOBAL  shift 50
	T_UNSET  shift 51
	T_ISSET  shift 52
	T_EMPTY  shift 53
	T_LIST  shift 54
	T_ARRAY  shift 55
	T_CLASS_C  shift 56
	T_METHOD_C  shift 57
	T_FUNC_C  shift 58
	T_LINE  shift 59
	T_FILE  shift 60
	T_START_HEREDOC  shift 61
	T_HALT_COMPILER  shift 62
	T_CLASSNAME  shift 63
	T_PACKAGE  shift 64
	T_IMPORT  shift 65
	'('  shift 66
	';'  shift 67
	'{'  shift 68
	'$'  shift 69
	'`'  shift 70
	'"'  shift 71
	'\''  shift 72
	$end  reduce 1
	T_ABSTRACT  reduce 86
	T_FINAL  reduce 86
	T_CLASS  reduce 86
	T_INTERFACE  reduce 86
	T_ENUM  reduce 86

	top_statement  goto 73
	statement  goto 74
	function_declaration_statement  goto 75
	class_declaration_statement  goto 76
	package_declaration_statement  goto 77
	enum_declaration_statement  goto 78
	unticked_statement  goto 79
	expr  goto 80
	expr_without_variable  goto 81
	variable  goto 82
	fully_qualified_class_name  goto 83
	r_variable  goto 84
	unticked_enum_declaration_statement  goto 85
	unticked_function_declaration_statement  goto 86
	unticked_class_declaration_statement  goto 87
	unticked_package_declaration_statement  goto 88
	optional_annotation_list  goto 89
	annotation_list  goto 90
	common_scalar  goto 91
	rw_variable  goto 92
	internal_functions_in_yacc  goto 93
	scalar  goto 94
	function_call  goto 95
	variable_without_objects  goto 96
	base_variable  goto 97
	class_constant  goto 98
	base_variable_with_function_calls  goto 99
	reference_variable  goto 100
	simple_indirect_reference  goto 101
	static_member  goto 102
	compound_variable  goto 103


state 3
	internal_functions_in_yacc : T_INCLUDE . expr  (432)

	T_INCLUDE  shift 3
	T_INCLUDE_ONCE  shift 4
	T_EVAL  shift 5
	T_REQUIRE  shift 6
	T_REQUIRE_ONCE  shift 7
	T_PRINT  shift 8
	'+'  shift 9
	'-'  shift 10
	'!'  shift 11
	'~'  shift 12
	T_INC  shift 13
	T_DEC  shift 14
	T_INT_CAST  shift 15
	T_DOUBLE_CAST  shift 16
	T_STRING_CAST  shift 17
	T_ARRAY_CAST  shift 18
	T_OBJECT_CAST  shift 19
	T_BOOL_CAST  shift 20
	T_UNSET_CAST  shift 21
	'@'  shift 22
	T_NEW  shift 24
	T_CLONE  shift 25
	T_EXIT  shift 27
	T_LNUMBER  shift 29
	T_DNUMBER  shift 30
	T_STRING  shift 31
	T_STRING_VARNAME  shift 32
	T_VARIABLE  shift 33
	T_CONSTANT_ENCAPSED_STRING  shift 35
	T_ISSET  shift 52
	T_EMPTY  shift 53
	T_LIST  shift 54
	T_ARRAY  shift 55
	T_CLASS_C  shift 56
	T_METHOD_C  shift 57
	T_FUNC_C  shift 58
	T_LINE  shift 59
	T_FILE  shift 60
	T_START_HEREDOC  shift 61
	T_CLASSNAME  shift 63
	'('  shift 66
	'$'  shift 69
	'`'  shift 70
	'"'  shift 71
	'\''  shift 72
	.  error

	expr  goto 104
	expr_without_variable  goto 81
	variable  goto 82
	fully_qualified_class_name  goto 83
	r_variable  goto 84
	common_scalar  goto 91
	rw_variable  goto 92
	internal_functions_in_yacc  goto 93
	scalar  goto 94
	function_call  goto 95
	variable_without_objects  goto 96
	base_variable  goto 97
	class_constant  goto 98
	base_variable_with_function_calls  goto 99
	reference_variable  goto 100
	simple_indirect_reference  goto 101
	static_member  goto 102
	compound_variable  goto 103


state 4
	internal_functions_in_yacc : T_INCLUDE_ONCE . expr  (433)

	T_INCLUDE  shift 3
	T_INCLUDE_ONCE  shift 4
	T_EVAL  shift 5
	T_REQUIRE  shift 6
	T_REQUIRE_ONCE  shift 7
	T_PRINT  shift 8
	'+'  shift 9
	'-'  shift 10
	'!'  shift 11
	'~'  shift 12
	T_INC  shift 13
	T_DEC  shift 14
	T_INT_CAST  shift 15
	T_DOUBLE_CAST  shift 16
	T_STRING_CAST  shift 17
	T_ARRAY_CAST  shift 18
	T_OBJECT_CAST  shift 19
	T_BOOL_CAST  shift 20
	T_UNSET_CAST  shift 21
	'@'  shift 22
	T_NEW  shift 24
	T_CLONE  shift 25
	T_EXIT  shift 27
	T_LNUMBER  shift 29
	T_DNUMBER  shift 30
	T_STRING  shift 31
	T_STRING_VARNAME  shift 32
	T_VARIABLE  shift 33
	T_CONSTANT_ENCAPSED_STRING  shift 35
	T_ISSET  shift 52
	T_EMPTY  shift 53
	T_LIST  shift 54
	T_ARRAY  shift 55
	T_CLASS_C  shift 56
	T_METHOD_C  shift 57
	T_FUNC_C  shift 58
	T_LINE  shift 59
	T_FILE  shift 60
	T_START_HEREDOC  shift 61
	T_CLASSNAME  shift 63
	'('  shift 66
	'$'  shift 69
	'`'  shift 70
	'"'  shift 71
	'\''  shift 72
	.  error

	expr  goto 105
	expr_without_variable  goto 81
	variable  goto 82
	fully_qualified_class_name  goto 83
	r_variable  goto 84
	common_scalar  goto 91
	rw_variable  goto 92
	internal_functions_in_yacc  goto 93
	scalar  goto 94
	function_call  goto 95
	variable_without_objects  goto 96
	base_variable  goto 97
	class_constant  goto 98
	base_variable_with_function_calls  goto 99
	reference_variable  goto 100
	simple_indirect_reference  goto 101
	static_member  goto 102
	compound_variable  goto 103


state 5
	internal_functions_in_yacc : T_EVAL . '(' expr ')'  (434)

	'('  shift 106
	.  error


state 6
	internal_functions_in_yacc : T_REQUIRE . expr  (435)

	T_INCLUDE  shift 3
	T_INCLUDE_ONCE  shift 4
	T_EVAL  shift 5
	T_REQUIRE  shift 6
	T_REQUIRE_ONCE  shift 7
	T_PRINT  shift 8
	'+'  shift 9
	'-'  shift 10
	'!'  shift 11
	'~'  shift 12
	T_INC  shift 13
	T_DEC  shift 14
	T_INT_CAST  shift 15
	T_DOUBLE_CAST  shift 16
	T_STRING_CAST  shift 17
	T_ARRAY_CAST  shift 18
	T_OBJECT_CAST  shift 19
	T_BOOL_CAST  shift 20
	T_UNSET_CAST  shift 21
	'@'  shift 22
	T_NEW  shift 24
	T_CLONE  shift 25
	T_EXIT  shift 27
	T_LNUMBER  shift 29
	T_DNUMBER  shift 30
	T_STRING  shift 31
	T_STRING_VARNAME  shift 32
	T_VARIABLE  shift 33
	T_CONSTANT_ENCAPSED_STRING  shift 35
	T_ISSET  shift 52
	T_EMPTY  shift 53
	T_LIST  shift 54
	T_ARRAY  shift 55
	T_CLASS_C  shift 56
	T_METHOD_C  shift 57
	T_FUNC_C  shift 58
	T_LINE  shift 59
	T_FILE  shift 60
	T_START_HEREDOC  shift 61
	T_CLASSNAME  shift 63
	'('  shift 66
	'$'  shift 69
	'`'  shift 70
	'"'  shift 71
	'\''  shift 72
	.  error
